--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,8 @@
 twig:
     file_name_pattern: '*.twig'
     form_themes: ['bootstrap_5_layout.html.twig']
-
+    globals:
+        test_variable: '@App\Service\CoucouService'
 
 when@test:
     twig:
