addresses and payment methods

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,7 @@ twig:
     form_themes: ['bootstrap_5_layout.html.twig']
     globals:
         test_variable: '@App\Service\CoucouService'
+        cart_global: '@App\Service\CartService'
 
 when@test:
     twig:
